# cairo-mobile

./: .gitignore  README.md  app.json  eas.json  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.github/workflows/: eas-build.yml  trunk-check.yml
.trunk/: trunk.yaml
.trunk/configs/: .rustfmt.toml  dictionary.txt  osv-scanner.toml
app/: App.tsx
assets/cairo-m/: fib.json
assets/noir/: noir_fib.json
cairo-m/: Cargo.toml  README.md
cairo-m/.cargo/: config.toml
cairo-m/bindgen/: Cargo.toml
cairo-m/runner/: Cargo.toml
cairo-m/runner/src/: lib.rs
cairo-m/runner/test_data/: fibonacci.json
components/: Accordion.tsx  ActionButtons.tsx  BaseResultsDisplay.tsx  CairoMResultsDisplay.tsx  ComingSoon.tsx  ErrorBoundary.tsx  NoirResultsDisplay.tsx  NumberInput.tsx  ProgramDropdown.tsx  ResultsDisplay.tsx  SystemDropdown.tsx
components/data/: constants.ts
components/styles/: colors.ts  typography.ts
components/utils/: computation.ts  constants.ts  proofSharing.ts
eas-hooks/: 01-install-rust-tools.sh  02-run-bindings-script.sh
hooks/: types.ts  useAppState.ts  useComputationMutations.ts  useErrorHandling.ts  useFileHandling.ts
modules/: README.md
modules/cairo-m/: Cargo.toml  README.md
modules/cairo-m-bindings/: expo-module.config.json  index.ts  package.json
modules/cairo-m-bindings/android/: build.gradle
modules/cairo-m-bindings/android/src/main/java/expo/modules/cairombindings/: CairoMBindingsModule.kt
modules/cairo-m-bindings/android/src/main/java/expo/modules/zkbindings/: CairoMBindingsModule.kt
modules/cairo-m-bindings/ios/: CairoMBindings.podspec  CairoMBindingsModule.swift
modules/cairo-m-bindings/src/: CairoMBindings.types.ts  CairoMBindingsModule.ts
modules/cairo-m/src/: fibonacci.json  lib.rs
modules/noir-provekit/: expo-module.config.json  index.ts  package.json
modules/noir-provekit/android/: build.gradle
modules/noir-provekit/android/src/main/java/expo/modules/noirprovekit/: NoirProveKitModule.kt
modules/noir-provekit/ios/: NoirProveKit.podspec  NoirProveKitModule.swift
modules/noir-provekit/src/: NoirProveKit.types.ts  NoirProveKitModule.ts
noir_provekit/: Cargo.toml  osv-scanner.toml
noir_provekit/bindgen/: Cargo.toml
noir_provekit/runner/: Cargo.toml
noir_provekit/runner/src/: lib.rs
noir_provekit/runner/test_data/noir_fib/: Nargo.toml
noir_provekit/runner/test_data/noir_fib/src/: main.nr
scripts/: setup_rust_bindings.mjs
