[workspace]
members = ["bindgen", "runner"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
cairo-m-common = { git = "https://github.com/kkrt-labs/cairo-m" }
cairo-m-runner = { git = "https://github.com/kkrt-labs/cairo-m" }
cairo-m-prover = { git = "https://github.com/kkrt-labs/cairo-m" }
thiserror = "2.0.12"
sonic-rs = "0.5.2"
stwo-prover = { git = "https://github.com/starkware-libs/stwo", features = [
  "parallel",
], rev = "ab57a1c" }
uniffi = { version = "0.29.3", features = ["cli"] }


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

# Custom profile for Android builds to preserve UniFFI symbols
[profile.android-release]
inherits = "release"
strip = false
