[package]
name = "cairo-m-bindings"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
cairo-m-common.workspace = true
cairo-m-runner.workspace = true
cairo-m-prover.workspace = true
thiserror.workspace = true
sonic-rs.workspace = true
stwo-prover.workspace = true
uniffi.workspace = true
