[package]
name = "cairo-m"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[workspace]
members = ["bindgen"]

[dependencies]
cairo-m-runner = { git = "https://github.com/kkrt-labs/cairo-m", branch = "oba/runner-lib" }
cairo-m-compiler = { git = "https://github.com/kkrt-labs/cairo-m", branch = "oba/runner-lib" }
thiserror = "2.0.12"
sonic-rs = "0.5.1"
uniffi = { version = "0.29.3", features = [ "cli" ] }
